# imager

./: .Rbuildignore  .Rhistory  .gitignore  .travis.yml  DESCRIPTION  FAQ.Rmd  FAQ.html  Makefile  NAMESPACE  NEWS  NEWS.md  README.md  TODO  _output.yaml  appveyor.yml  ascii_art.Rmd  ascii_art.html  canny.Rmd  canny.html  cleanup  compile.R  config.status  configure  configure.ac  cpp_api.Rmd  cpp_api.html  foreground_background.Rmd  foreground_background.html  gengallery.R  gettingstarted.Rmd  gettingstarted.html  gimptools.Rmd  gimptools.html  gradient_field.Rmd  gradient_field.html  image_stats.Rmd  image_stats.html  imager.R  imager.Rmd  imager.html  (+27 more)
R/: #RcppExports.R#  .Rhistory  RcppExports.R  basegraphics.R  canny.R  cimg_class.R  conversions.R  coordinates.R  datasets.R  drawing.R  filtering.R  graphs.R  hough.R  imeval.R  imgen.R  imglist.R  inline.R  interactive.R  interpolation.R  loading.R  pixset.R  splitcombine.R  stencils.R  transformations.R  utils.R  zzz.R
ascii_art_files/: tennis_ascii.webm
autom4te.cache/: output.0  requests  traces.0  traces.1
data/: boats.RData  boats.rda
imager_files/figure-html/: animate-.webm  increasing_blur.webm
inst/extdata/: tennis_sif.mpeg
inst/include/: CImg.h  NOTE_CImg  glue.h  imager.h  imager_RcppExports.h  note_about_CImg.h.txt  wrappers.h
inst/include/plugins/: chlpca.h  cvMat.h  draw_gradient.h  ipl.h  ipl_alt.h  jpeg_buffer.h  nlmeans.h  patchmatch.h
joss/: paper.bib  paper.md
man/: B.Rd  FFT.Rd  G.Rd  R.Rd  RasterPackage.Rd  add.colour.Rd  as.cimg.Rd  as.cimg.array.Rd  as.cimg.data.frame.Rd  as.cimg.function.Rd  as.cimg.raster.Rd  as.data.frame.cimg.Rd  as.data.frame.imlist.Rd  as.data.frame.pixset.Rd  as.graph.Rd  as.graph.pixset.Rd  as.igraph.cimg.Rd  as.igraph.pixset.Rd  as.im.cimg.Rd  as.imlist.Rd  as.list.imlist.Rd  as.pixset.Rd  as.raster.cimg.Rd  at.Rd  autocrop.Rd  bbox.Rd  blur_anisotropic.Rd  boats.Rd  boundary.Rd  boxblur.Rd  boxblur_xy.Rd  bucket_fill.Rd  bucket_select.Rd  bucketfill.Rd  cannyEdges.Rd  capture.plot.Rd  center.stencil.Rd  channel.Rd  channels.Rd  ci.Rd  (+151 more)
revdep/: checks.rds
src/: #CImg.h#  .Rhistory  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  colourspace.cpp  compile.R  coordinates.cpp  display.cpp  drawing.cpp  filtering.cpp  hough.cpp  imager.h  imgraphs.cpp  interact.cpp  interpolation.cpp  morphology.cpp  reductions.cpp  register.c  symbols.rds  transformations.cpp  utils.cpp  video_io.cpp  wrappers.cpp  wrappers.h  wrappers_cimglist.h
tests/: testthat.R
tests/testthat/: test-ExtractCorrectPatch.R  test_cpp_api.R  test_load_save_images.R  test_load_save_videos.R  test_reductions.R
vignettes/: .#imager.Rmd  .Rhistory  gettingstarted.R  gettingstarted.Rmd  image_stats.Rmd  image_stats.html  imager.Rmd  imager.md  pixsets.Rmd
